--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /Sudoku/Sudoku/obj
 /Sudoku/TestSudoku/bin/Debug/netcoreapp2.1
 /Sudoku/TestSudoku/obj
+/ZoomGps/TestZoomGps/obj
+/ZoomGps/TestZoomGps/bin/Debug/netcoreapp3.1
+/ZoomGps/ZoomGps/bin/Debug/netstandard2.0
+/ZoomGps/ZoomGps/obj
+/.vs/IAPractice/v16
+/Sudoku/.vs
