TSP with genetic algo

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /ZoomGps/ZoomGps/obj
 /.vs/IAPractice/v16
 /Sudoku/.vs
+/TravelingSalesmanProblem/TestTsp/bin/Debug/netcoreapp3.1
+/TravelingSalesmanProblem/TestTsp/obj
+/TravelingSalesmanProblem/TSP/bin/Debug/netstandard2.0
+/TravelingSalesmanProblem/TSP/obj
