--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /TravelingSalesmanProblem/TestTsp/obj
 /TravelingSalesmanProblem/TSP/bin/Debug/netstandard2.0
 /TravelingSalesmanProblem/TSP/obj
+/.vs/IA/v16/.suo
+/PathFinder/bin/Debug/netstandard2.0
+/PathFinder/obj
+/Poissons/bin/Debug
+/Poissons/obj
